--- a/IFC_Project/IFC_Project.cbp
+++ b/IFC_Project/IFC_Project.cbp
@@ -37,6 +37,9 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="nbQuestions.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<envvars />
 			<code_completion />
